# pruebaIparcialE2D

./: CMakeLists.txt  DataFile.cpp  DataFile.h  DelimiterVarSize_Register.cpp  DelimiterVarSize_Register.h  FixedSize_Register.cpp  FixedSize_Register.h  KnownVarSize_Register.cpp  KnownVarSize_Register.h  main.cpp
